--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -4432,6 +4432,15 @@
   publisher: eG Innovations
 - name: eks-node-monitoring-agent
   versions:
+  - version: v1.5.1-eksbuild.1
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.5.0-eksbuild.1
     compatibilities:
     - '1.35'
@@ -5414,6 +5423,10 @@
   - version: v1.35.0-eksbuild.2
     compatibilities:
     - '1.35'
+  - version: v1.34.3-eksbuild.2
+    compatibilities:
+    - '1.35'
+    - '1.34'
   - version: v1.34.1-eksbuild.2
     compatibilities:
     - '1.35'
