--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,7 @@
     "start:prod": "VITE_PROD_SECRET_KEY=1234567890 vite build && BASE_URL=console.plrldemo.onplural.sh vite preview",
     "design-system:start": "yarn workspace @pluralsh/design-system start",
     "build": "yarn design-system:build && tsc --build && vite build",
+    "build:no-ds": "tsc --build && vite build",
     "build:no-tsc": "vite build",
     "design-system:build": "yarn workspace @pluralsh/design-system build",
     "design-system:build:watch": "yarn workspace @pluralsh/design-system build:watch",
