--- a/charts/controller/crds/deployments.plural.sh_sentinels.yaml
+++ b/charts/controller/crds/deployments.plural.sh_sentinels.yaml
@@ -9973,6 +9973,11 @@ spec:
                   - type
                   type: object
                 type: array
+              crontab:
+                description: |-
+                  Crontab defines a schedule at which sentinels will automatically run. Can be left empty to run manually or via the API.
+                  Examples: "0 */6 * * *" (every 6 hours), "*/15 * * * *" (every 15 minutes).
+                type: string
               description:
                 description: Description provides a human-readable explanation of
                   what this Sentinel.
