--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -6735,6 +6735,13 @@
   publisher: leaksignal
 - name: metrics-server
   versions:
+  - version: v0.8.1-eksbuild.1
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
   - version: v0.8.0-eksbuild.6
     compatibilities:
     - '1.35'
@@ -6780,6 +6787,15 @@
     - '1.29'
     - '1.28'
     - '1.27'
+  - version: v0.7.2-eksbuild.8
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v0.7.2-eksbuild.7
     compatibilities:
     - '1.35'
@@ -7014,6 +7030,15 @@
   publisher: Nirmata
 - name: prometheus-node-exporter
   versions:
+  - version: v1.10.2-eksbuild.8
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.10.2-eksbuild.6
     compatibilities:
     - '1.35'
