--- a/static/compatibilities/cilium.yaml
+++ b/static/compatibilities/cilium.yaml
@@ -4,6 +4,13 @@ helm_repository_url: https://helm.cilium.io/
 helm_values: debug.verbose=flow
 eolApiSlug: cilium
 versions:
+- version: 1.19.0
+  kube: ['1.35', '1.34', '1.33']
+  requirements: []
+  incompatibilities: []
+  summary: null
+  chart_version: 1.19.0
+  images: []
 - version: 1.18.6
   kube: ['1.35', '1.34', '1.33']
   requirements: []
