--- a/static/compatibilities/gatekeeper.yaml
+++ b/static/compatibilities/gatekeeper.yaml
@@ -5,6 +5,13 @@ helm_repository_url: https://open-policy-agent.github.io/gatekeeper/charts
 chart_name: gatekeeper
 eolApiSlug: gatekeeper
 versions:
+- version: 3.21.1
+  kube: ['1.35', '1.34', '1.33']
+  requirements: []
+  incompatibilities: []
+  summary: null
+  chart_version: 3.21.1
+  images: ['curlimages/curl:8.12.0', 'openpolicyagent/gatekeeper-crds:v3.21.1', 'openpolicyagent/gatekeeper:v3.21.1']
 - version: 3.21.0
   kube: ['1.34', '1.33', '1.32']
   requirements: []
