--- a/static/compatibilities/kubescape-operator.yaml
+++ b/static/compatibilities/kubescape-operator.yaml
@@ -4,23 +4,12 @@ release_url: https://github.com/kubescape/helm-charts/releases/tag/kubescape-ope
 helm_repository_url: https://kubescape.github.io/helm-charts
 helm_values: clusterName=example,account=example
 versions:
-- version: 1.30.2
+- version: 1.30.3
   kube: ['1.35', '1.34', '1.33']
   requirements: []
   incompatibilities: []
-  summary:
-    helm_changes: ''
-    chart_updates: ['1.30.0: Fixed otel-collector deployment to support using an external
-        OTEL URL without requiring a cloud provider configuration.', '1.30.0: Adjusted
-        NetworkPolicies to (a) allow prometheus-exporter egress and storage ingress,
-        and (b) allow Prometheus ServiceMonitor traffic for kubescape.', '1.30.0:
-        Added/introduced an image-based feature (per release note: "Feat/image based").',
-      '1.30.2: No specific chart changes listed in the provided release notes (release
-        page content did not include a "What''s Changed" section in the excerpt).']
-    features: ['1.30.0: Introduced an image-based capability/feature (release note:
-        "Feat/image based").']
-    breaking_changes: []
-  chart_version: 1.30.2
+  summary: null
+  chart_version: 1.30.3
   images: []
 - version: 1.30.0
   kube: ['1.35', '1.34', '1.33']
