--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -981,6 +981,7 @@
   versions:
   - version: v1.2.0-eksbuild.1
     compatibilities:
+    - '1.34'
     - '1.33'
     - '1.32'
     - '1.31'
@@ -3416,6 +3417,11 @@
   publisher: cloudsoft
 - name: coredns
   versions:
+  - version: v1.13.2-eksbuild.1
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
   - version: v1.13.1-eksbuild.1
     compatibilities:
     - '1.35'
@@ -4900,6 +4906,15 @@
   publisher: Elastic
 - name: external-dns
   versions:
+  - version: v0.20.0-eksbuild.3
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v0.20.0-eksbuild.2
     compatibilities:
     - '1.35'
@@ -5222,6 +5237,14 @@
   publisher: FriendliAI
 - name: friendliai_friendli-container-eks
   versions:
+  - version: v1.13.21-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.12.6-eksbuild.1
     compatibilities:
     - '1.34'
@@ -7212,6 +7235,15 @@
   publisher: rafay-systems
 - name: snapshot-controller
   versions:
+  - version: v8.4.0-eksbuild.4
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v8.4.0-eksbuild.3
     compatibilities:
     - '1.35'
@@ -7768,6 +7800,14 @@
   publisher: Splunk
 - name: sriov-network-metrics-exporter
   versions:
+  - version: v1.2.0-eksbuild.2
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
   - version: v1.2.0-eksbuild.1
     compatibilities:
     - '1.35'
